Reorganized to separate three datasets and use pipes to manipulate each.

--- a/p8105_hw2_ELK2149.md
+++ b/p8105_hw2_ELK2149.md
@@ -3,3 +3,53 @@ Homework 2
 Evan Kennedy, ELK2149
 2025-09-28
 
+\*\*\* Problem 1 \*\*\*
+
+``` r
+pols_month_df = 
+    read_csv("./fivethirtyeight_datasets/pols-month.csv", na = c("NA", ".")) |>
+  janitor::clean_names()
+```
+
+    ## Rows: 822 Columns: 9
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl  (8): prez_gop, gov_gop, sen_gop, rep_gop, prez_dem, gov_dem, sen_dem, r...
+    ## date (1): mon
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+unemployment_df = 
+    read_csv("./fivethirtyeight_datasets/unemployment.csv", na = c("NA", ".")) |>
+  janitor::clean_names()
+```
+
+    ## Warning: One or more parsing issues, call `problems()` on your data frame for details,
+    ## e.g.:
+    ##   dat <- vroom(...)
+    ##   problems(dat)
+
+    ## Rows: 68 Columns: 13
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (13): Year, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+snp_df = 
+    read_csv("./fivethirtyeight_datasets/snp.csv", na = c("NA", ".")) |>
+  janitor::clean_names()
+```
+
+    ## Rows: 787 Columns: 2
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (1): date
+    ## dbl (1): close
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
