--- a/p8105_hw2_ELK2149.md
+++ b/p8105_hw2_ELK2149.md
@@ -8,7 +8,15 @@ Evan Kennedy, ELK2149
 ``` r
 pols_month_df = 
     read_csv("./fivethirtyeight_datasets/pols-month.csv", na = c("NA", ".")) |>
-  janitor::clean_names()
+  janitor::clean_names() |> 
+  separate(mon, into = c("year", "month", "day"), sep = "-", convert = TRUE) |> 
+  mutate(month = month.name[month]) |> 
+  mutate(
+    president = case_when(
+      prez_dem == 1 ~ "dem",
+      prez_gop == 1 ~ "gop")
+) |> 
+  select(-prez_dem, -prez_gop, -day)
 ```
 
     ## Rows: 822 Columns: 9
@@ -19,6 +27,61 @@ pols_month_df =
     ## 
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+pols_month_df
+```
+
+    ## # A tibble: 822 × 9
+    ##     year month     gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president
+    ##    <int> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr>    
+    ##  1  1947 January        23      51     253      23      45     198 dem      
+    ##  2  1947 February       23      51     253      23      45     198 dem      
+    ##  3  1947 March          23      51     253      23      45     198 dem      
+    ##  4  1947 April          23      51     253      23      45     198 dem      
+    ##  5  1947 May            23      51     253      23      45     198 dem      
+    ##  6  1947 June           23      51     253      23      45     198 dem      
+    ##  7  1947 July           23      51     253      23      45     198 dem      
+    ##  8  1947 August         23      51     253      23      45     198 dem      
+    ##  9  1947 September      23      51     253      23      45     198 dem      
+    ## 10  1947 October        23      51     253      23      45     198 dem      
+    ## # ℹ 812 more rows
+
+``` r
+snp_df = 
+    read_csv("./fivethirtyeight_datasets/snp.csv", na = c("NA", ".")) |>
+  janitor::clean_names()  |> 
+  separate(date, into = c("year", "month", "day"), sep = "/", convert = TRUE) |> 
+  arrange(year, month)
+```
+
+    ## Rows: 787 Columns: 2
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (1): date
+    ## dbl (1): close
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+snp_df
+```
+
+    ## # A tibble: 787 × 4
+    ##     year month   day close
+    ##    <int> <int> <int> <dbl>
+    ##  1     1     2    15 1995.
+    ##  2     1     2    14 1783.
+    ##  3     1     2    13 1498.
+    ##  4     1     2     9  826.
+    ##  5     1     2     8 1379.
+    ##  6     1     2     4 1131.
+    ##  7     1     2     3  856.
+    ##  8     1     2     2 1130.
+    ##  9     1     2     1 1366.
+    ## 10     1     2    98  980.
+    ## # ℹ 777 more rows
 
 ``` r
 unemployment_df = 
@@ -40,16 +103,20 @@ unemployment_df =
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 ``` r
-snp_df = 
-    read_csv("./fivethirtyeight_datasets/snp.csv", na = c("NA", ".")) |>
-  janitor::clean_names()
+unemployment_df
 ```
 
-    ## Rows: 787 Columns: 2
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## chr (1): date
-    ## dbl (1): close
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+    ## # A tibble: 68 × 13
+    ##     year   jan   feb   mar   apr   may   jun   jul   aug   sep   oct   nov   dec
+    ##    <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>
+    ##  1  1948   3.4   3.8   4     3.9   3.5   3.6   3.6   3.9   3.8   3.7   3.8   4  
+    ##  2  1949   4.3   4.7   5     5.3   6.1   6.2   6.7   6.8   6.6   7.9   6.4   6.6
+    ##  3  1950   6.5   6.4   6.3   5.8   5.5   5.4   5     4.5   4.4   4.2   4.2   4.3
+    ##  4  1951   3.7   3.4   3.4   3.1   3     3.2   3.1   3.1   3.3   3.5   3.5   3.1
+    ##  5  1952   3.2   3.1   2.9   2.9   3     3     3.2   3.4   3.1   3     2.8   2.7
+    ##  6  1953   2.9   2.6   2.6   2.7   2.5   2.5   2.6   2.7   2.9   3.1   3.5   4.5
+    ##  7  1954   4.9   5.2   5.7   5.9   5.9   5.6   5.8   6     6.1   5.7   5.3   5  
+    ##  8  1955   4.9   4.7   4.6   4.7   4.3   4.2   4     4.2   4.1   4.3   4.2   4.2
+    ##  9  1956   4     3.9   4.2   4     4.3   4.3   4.4   4.1   3.9   3.9   4.3   4.2
+    ## 10  1957   4.2   3.9   3.7   3.9   4.1   4.3   4.2   4.1   4.4   4.5   5.1   5.2
+    ## # ℹ 58 more rows
