Finished with SNP organization.

--- a/p8105_hw2_ELK2149.md
+++ b/p8105_hw2_ELK2149.md
@@ -52,7 +52,8 @@ snp_df =
     read_csv("./fivethirtyeight_datasets/snp.csv", na = c("NA", ".")) |>
   janitor::clean_names()  |> 
   separate(date, into = c("year", "month", "day"), sep = "/", convert = TRUE) |> 
-  arrange(year, month)
+  arrange(year, month) |> 
+  select(year, month, everything(), -day)
 ```
 
     ## Rows: 787 Columns: 2
@@ -68,19 +69,19 @@ snp_df =
 snp_df
 ```
 
-    ## # A tibble: 787 × 4
-    ##     year month   day close
-    ##    <int> <int> <int> <dbl>
-    ##  1     1     2    15 1995.
-    ##  2     1     2    14 1783.
-    ##  3     1     2    13 1498.
-    ##  4     1     2     9  826.
-    ##  5     1     2     8 1379.
-    ##  6     1     2     4 1131.
-    ##  7     1     2     3  856.
-    ##  8     1     2     2 1130.
-    ##  9     1     2     1 1366.
-    ## 10     1     2    98  980.
+    ## # A tibble: 787 × 3
+    ##     year month close
+    ##    <int> <int> <dbl>
+    ##  1     1     2 1995.
+    ##  2     1     2 1783.
+    ##  3     1     2 1498.
+    ##  4     1     2  826.
+    ##  5     1     2 1379.
+    ##  6     1     2 1131.
+    ##  7     1     2  856.
+    ##  8     1     2 1130.
+    ##  9     1     2 1366.
+    ## 10     1     2  980.
     ## # ℹ 777 more rows
 
 ``` r
