Finish organizing unemployment, return to SNP to fix date order, and convert month + year.

--- a/p8105_hw2_ELK2149.md
+++ b/p8105_hw2_ELK2149.md
@@ -6,6 +6,8 @@ Evan Kennedy, ELK2149
 \*\*\* Problem 1 \*\*\*
 
 ``` r
+#separating out date variable, converting month into names of month, converting prez_dem and prez_gop into a single variable, and removing them along with day.
+
 pols_month_df = 
     read_csv("./fivethirtyeight_datasets/pols-month.csv", na = c("NA", ".")) |>
   janitor::clean_names() |> 
@@ -48,10 +50,13 @@ pols_month_df
     ## # ℹ 812 more rows
 
 ``` r
+#separating out date variable by /, arranging but year, month, removing day to mirror above data frame.
 snp_df = 
     read_csv("./fivethirtyeight_datasets/snp.csv", na = c("NA", ".")) |>
   janitor::clean_names()  |> 
-  separate(date, into = c("year", "month", "day"), sep = "/", convert = TRUE) |> 
+  separate(date, into = c("month", "day", "year"), sep = "/", convert = TRUE) |> 
+  mutate(year = ifelse(year >= 47, year + 1900, year + 2000)) |> 
+  mutate(month = month.name[month]) |>
   arrange(year, month) |> 
   select(year, month, everything(), -day)
 ```
@@ -70,24 +75,43 @@ snp_df
 ```
 
     ## # A tibble: 787 × 3
-    ##     year month close
-    ##    <int> <int> <dbl>
-    ##  1     1     2 1995.
-    ##  2     1     2 1783.
-    ##  3     1     2 1498.
-    ##  4     1     2  826.
-    ##  5     1     2 1379.
-    ##  6     1     2 1131.
-    ##  7     1     2  856.
-    ##  8     1     2 1130.
-    ##  9     1     2 1366.
-    ## 10     1     2  980.
+    ##     year month    close
+    ##    <dbl> <chr>    <dbl>
+    ##  1  1950 April     18.0
+    ##  2  1950 August    18.4
+    ##  3  1950 December  20.4
+    ##  4  1950 February  17.2
+    ##  5  1950 January   17.0
+    ##  6  1950 July      17.8
+    ##  7  1950 June      17.7
+    ##  8  1950 March     17.3
+    ##  9  1950 May       18.8
+    ## 10  1950 November  19.5
     ## # ℹ 777 more rows
 
 ``` r
 unemployment_df = 
     read_csv("./fivethirtyeight_datasets/unemployment.csv", na = c("NA", ".")) |>
-  janitor::clean_names()
+  janitor::clean_names() |> 
+  pivot_longer(
+    jan:dec,
+    names_to = "month", 
+    values_to = "%_UnEmp") |> 
+ mutate(month = case_match(
+    month,
+    "jan" ~ "January",
+    "feb" ~ "February",
+    "mar" ~ "March",
+    "apr" ~ "April",
+    "may" ~ "May",
+    "jun" ~ "June",
+    "jul" ~ "July",
+    "aug" ~ "August",
+    "sep" ~ "September",
+    "oct" ~ "October",
+    "nov" ~ "November",
+    "dec" ~ "December")
+ )
 ```
 
     ## Warning: One or more parsing issues, call `problems()` on your data frame for details,
@@ -107,17 +131,17 @@ unemployment_df =
 unemployment_df
 ```
 
-    ## # A tibble: 68 × 13
-    ##     year   jan   feb   mar   apr   may   jun   jul   aug   sep   oct   nov   dec
-    ##    <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>
-    ##  1  1948   3.4   3.8   4     3.9   3.5   3.6   3.6   3.9   3.8   3.7   3.8   4  
-    ##  2  1949   4.3   4.7   5     5.3   6.1   6.2   6.7   6.8   6.6   7.9   6.4   6.6
-    ##  3  1950   6.5   6.4   6.3   5.8   5.5   5.4   5     4.5   4.4   4.2   4.2   4.3
-    ##  4  1951   3.7   3.4   3.4   3.1   3     3.2   3.1   3.1   3.3   3.5   3.5   3.1
-    ##  5  1952   3.2   3.1   2.9   2.9   3     3     3.2   3.4   3.1   3     2.8   2.7
-    ##  6  1953   2.9   2.6   2.6   2.7   2.5   2.5   2.6   2.7   2.9   3.1   3.5   4.5
-    ##  7  1954   4.9   5.2   5.7   5.9   5.9   5.6   5.8   6     6.1   5.7   5.3   5  
-    ##  8  1955   4.9   4.7   4.6   4.7   4.3   4.2   4     4.2   4.1   4.3   4.2   4.2
-    ##  9  1956   4     3.9   4.2   4     4.3   4.3   4.4   4.1   3.9   3.9   4.3   4.2
-    ## 10  1957   4.2   3.9   3.7   3.9   4.1   4.3   4.2   4.1   4.4   4.5   5.1   5.2
-    ## # ℹ 58 more rows
+    ## # A tibble: 816 × 3
+    ##     year month     `%_UnEmp`
+    ##    <dbl> <chr>         <dbl>
+    ##  1  1948 January         3.4
+    ##  2  1948 February        3.8
+    ##  3  1948 March           4  
+    ##  4  1948 April           3.9
+    ##  5  1948 May             3.5
+    ##  6  1948 June            3.6
+    ##  7  1948 July            3.6
+    ##  8  1948 August          3.9
+    ##  9  1948 September       3.8
+    ## 10  1948 October         3.7
+    ## # ℹ 806 more rows
