--- a/p8105_hw2_ELK2149.md
+++ b/p8105_hw2_ELK2149.md
@@ -50,14 +50,14 @@ pols_month_df
     ## # ℹ 812 more rows
 
 ``` r
-#separating out date variable by /, arranging but year, month, removing day to mirror above data frame.
+#separating out date variable by /, converting year to YYYY, converting month to character format, arranging buy year, month, removing day to mirror above data frame.
 snp_df = 
     read_csv("./fivethirtyeight_datasets/snp.csv", na = c("NA", ".")) |>
   janitor::clean_names()  |> 
   separate(date, into = c("month", "day", "year"), sep = "/", convert = TRUE) |> 
   mutate(year = ifelse(year >= 47, year + 1900, year + 2000)) |> 
   mutate(month = month.name[month]) |>
-  arrange(year, month) |> 
+  arrange(year) |> 
   select(year, month, everything(), -day)
 ```
 
@@ -75,21 +75,22 @@ snp_df
 ```
 
     ## # A tibble: 787 × 3
-    ##     year month    close
-    ##    <dbl> <chr>    <dbl>
-    ##  1  1950 April     18.0
-    ##  2  1950 August    18.4
-    ##  3  1950 December  20.4
-    ##  4  1950 February  17.2
-    ##  5  1950 January   17.0
-    ##  6  1950 July      17.8
-    ##  7  1950 June      17.7
-    ##  8  1950 March     17.3
-    ##  9  1950 May       18.8
-    ## 10  1950 November  19.5
+    ##     year month     close
+    ##    <dbl> <chr>     <dbl>
+    ##  1  1950 December   20.4
+    ##  2  1950 November   19.5
+    ##  3  1950 October    19.5
+    ##  4  1950 September  19.5
+    ##  5  1950 August     18.4
+    ##  6  1950 July       17.8
+    ##  7  1950 June       17.7
+    ##  8  1950 May        18.8
+    ##  9  1950 April      18.0
+    ## 10  1950 March      17.3
     ## # ℹ 777 more rows
 
 ``` r
+# pivoting long, converting month name to be consistent with other data sets.
 unemployment_df = 
     read_csv("./fivethirtyeight_datasets/unemployment.csv", na = c("NA", ".")) |>
   janitor::clean_names() |> 
@@ -145,3 +146,61 @@ unemployment_df
     ##  9  1948 September       3.8
     ## 10  1948 October         3.7
     ## # ℹ 806 more rows
+
+``` r
+#join SNP into POLS
+
+pols_snp_df = 
+  left_join(pols_month_df, snp_df, by = c("year", "month"))
+
+pols_snp_df
+```
+
+    ## # A tibble: 822 × 10
+    ##     year month   gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president close
+    ##    <dbl> <chr>     <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr>     <dbl>
+    ##  1  1947 January      23      51     253      23      45     198 dem          NA
+    ##  2  1947 Februa…      23      51     253      23      45     198 dem          NA
+    ##  3  1947 March        23      51     253      23      45     198 dem          NA
+    ##  4  1947 April        23      51     253      23      45     198 dem          NA
+    ##  5  1947 May          23      51     253      23      45     198 dem          NA
+    ##  6  1947 June         23      51     253      23      45     198 dem          NA
+    ##  7  1947 July         23      51     253      23      45     198 dem          NA
+    ##  8  1947 August       23      51     253      23      45     198 dem          NA
+    ##  9  1947 Septem…      23      51     253      23      45     198 dem          NA
+    ## 10  1947 October      23      51     253      23      45     198 dem          NA
+    ## # ℹ 812 more rows
+
+``` r
+#join unemployment
+
+pols_snp_unemp_df = 
+  left_join(pols_snp_df, unemployment_df, by = c("year", "month"))
+
+pols_snp_unemp_df
+```
+
+    ## # A tibble: 822 × 11
+    ##     year month   gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president close
+    ##    <dbl> <chr>     <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr>     <dbl>
+    ##  1  1947 January      23      51     253      23      45     198 dem          NA
+    ##  2  1947 Februa…      23      51     253      23      45     198 dem          NA
+    ##  3  1947 March        23      51     253      23      45     198 dem          NA
+    ##  4  1947 April        23      51     253      23      45     198 dem          NA
+    ##  5  1947 May          23      51     253      23      45     198 dem          NA
+    ##  6  1947 June         23      51     253      23      45     198 dem          NA
+    ##  7  1947 July         23      51     253      23      45     198 dem          NA
+    ##  8  1947 August       23      51     253      23      45     198 dem          NA
+    ##  9  1947 Septem…      23      51     253      23      45     198 dem          NA
+    ## 10  1947 October      23      51     253      23      45     198 dem          NA
+    ## # ℹ 812 more rows
+    ## # ℹ 1 more variable: `%_UnEmp` <dbl>
+
+The variables in this dataset are: year, month, gov_gop, sen_gop,
+rep_gop, gov_dem, sen_dem, rep_dem, president, close, %\_UnEmp. The data
+was collected between the dates of 1947 and 2015. The dataset has 822
+rows and 11 columns. pols_month_df contains data relating to the number
+of federal representatives, senators, state governors and president who
+represent each party in a given month and year. snp_df contains data on
+the S&P stock market score, by month and year. unemployment_df provides
+the percent of unemployment in the united states by month and year.
