--- a/p8105_hw2_ELK2149.rmd
+++ b/p8105_hw2_ELK2149.rmd
@@ -12,6 +12,7 @@ author: Evan Kennedy, ELK2149
 library(moderndive)
 library(tidyverse)
 library(dplyr)
+library(readxl)
 
 ```
 
@@ -99,4 +100,19 @@ pols_snp_unemp_df
 The variables in this dataset are: `r (names(pols_snp_unemp_df))`. The data was collected between the dates of `r min(pols_snp_unemp_df$year)` and `r max(pols_snp_unemp_df$year)`. The dataset has `r nrow(pols_snp_unemp_df)` rows and `r ncol(pols_snp_unemp_df)` columns. pols_month_df contains data relating to the number of federal representatives, senators, state governors and president who represent each party in a given month and year. snp_df contains data on the S&P stock market score, by month and year. unemployment_df provides the percent of unemployment in the united states by month and year. 
 
 
+*** Problem 2 ***
+
+```{r}
+trash_df = 
+  read_excel("./Trash_Data.xlsx", sheet = "Mr. Trash Wheel", range = "A2:N653", na = c("NA", ".")) |>
+  janitor::clean_names() |> 
+  rename (
+    weight = weight_tons,
+    volume = volume_cubic_yards
+  )
+  
+    
+head(trash_df, 5)
+
+```
 
