--- a/p8105_hw2_ELK2149.rmd
+++ b/p8105_hw2_ELK2149.rmd
@@ -152,5 +152,16 @@ zip_codes_df =
 ```{r}
 zip_zori_df = 
     read_csv("./zillow_data/Zip_zori.csv", na = c("NA", ".")) |>
-  janitor::clean_names()
+  janitor::clean_names() |> 
+  pivot_longer(
+    x2015_01_31:x2024_08_31,
+    names_to = "Date", 
+    values_to = "Zori") |> 
+  rename(zip_code = region_name)
 ```
+
+```{r}
+full_zip_df = 
+  left_join(zip_codes_df, zip_zori_df, by = "zip_code")
+```
+
