combined zip df simplified and arranged, redundant variables removed and x removed from date variable

--- a/p8105_hw2_ELK2149.md
+++ b/p8105_hw2_ELK2149.md
@@ -246,3 +246,61 @@ The data was collected between the dates of 2014 and 2024. The dataset
 has a total of 1032 observations. The total weight of trash collected by
 Professor Trash Dumpster was 246.74 tons. The total number of cigarette
 butts, collected by Gwynnda Trash Dumpster was 18120.
+
+\*\*\* Problem 3 \*\*\*
+
+``` r
+zip_codes_df = 
+    read_csv("./zillow_data/Zip Codes.csv", na = c("NA", ".")) |>
+  janitor::clean_names()
+```
+
+    ## Rows: 322 Columns: 7
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (4): County, County Code, File Date, Neighborhood
+    ## dbl (3): State FIPS, County FIPS, ZipCode
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+zip_zori_df = 
+    read_csv("./zillow_data/Zip_zori.csv", na = c("NA", ".")) |>
+  janitor::clean_names() |> 
+  pivot_longer(
+    x2015_01_31:x2024_08_31,
+    names_to = "date", 
+    values_to = "zori") |> 
+  rename(zip_code = region_name)
+```
+
+    ## Rows: 149 Columns: 125
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr   (6): RegionType, StateName, State, City, Metro, CountyName
+    ## dbl (119): RegionID, SizeRank, RegionName, 2015-01-31, 2015-02-28, 2015-03-3...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+full_zip_df = 
+  left_join(zip_codes_df, zip_zori_df, by = "zip_code")
+```
+
+    ## Warning in left_join(zip_codes_df, zip_zori_df, by = "zip_code"): Detected an unexpected many-to-many relationship between `x` and `y`.
+    ## ℹ Row 1 of `x` matches multiple rows in `y`.
+    ## ℹ Row 4757 of `y` matches multiple rows in `x`.
+    ## ℹ If a many-to-many relationship is expected, set `relationship =
+    ##   "many-to-many"` to silence this warning.
+
+``` r
+full_zip_df = 
+  full_zip_df |> 
+  mutate(date = str_remove(date, "^x")) |> 
+  select(
+    zip_code, date, county, neighborhood, city, state, zori, everything(), -state_fips,
+    -county_code, -region_type, -state_name, -metro, -file_date, -county_name
+  )
+```
