Final table of top 10 zip codes with largest price drop.

--- a/p8105_hw2_ELK2149.md
+++ b/p8105_hw2_ELK2149.md
@@ -299,8 +299,95 @@ full_zip_df =
 full_zip_df = 
   full_zip_df |> 
   mutate(date = str_remove(date, "^x")) |> 
+  separate(date, into = c("year", "month", "day"), sep = "_", convert = TRUE) |>
+  mutate(month = month.name[month]) |> 
   select(
-    zip_code, date, county, neighborhood, city, state, zori, everything(), -state_fips,
+    zip_code, year, month, day, county, neighborhood, city, state, zori, everything(), -state_fips,
     -county_code, -region_type, -state_name, -metro, -file_date, -county_name
   )
 ```
+
+The variables in this dataset are: zip_code, year, month, day, county,
+neighborhood, city, state, zori, county_fips, region_id, size_rank. The
+data was collected between the dates of 2015 and 2024. The dataset has a
+total of 17687 observations.
+
+The following is a list of zip codes not in the Zillow rental price
+dataset: 10464, 10474, 10475, 10499, 10550, 10704, 10705, 10803, 11202,
+11224, 11239, 11241, 11242, 11243, 11245, 11247, 11251, 11252, 11256,
+10008, 10020, 10041, 10043, 10045, 10047, 10048, 10055, 10072, 10080,
+10081, 10082, 10087, 10101, 10102, 10103, 10104, 10105, 10106, 10107,
+10108, 10109, 10110, 10111, 10112, 10113, 10114, 10115, 10116, 10117,
+10118, 10119, 10120, 10121, 10122, 10123, 10124, 10125, 10126, 10129,
+10130, 10131, 10132, 10133, 10138, 10149, 10150, 10151, 10152, 10153,
+10154, 10155, 10156, 10157, 10158, 10159, 10160, 10161, 10163, 10164,
+10165, 10166, 10167, 10168, 10169, 10170, 10171, 10172, 10173, 10174,
+10175, 10176, 10177, 10178, 10179, 10185, 10197, 10199, 10213, 10242,
+10249, 10256, 10259, 10260, 10261, 10265, 10268, 10269, 10270, 10271,
+10272, 10273, 10274, 10275, 10276, 10277, 10278, 10279, 10281, 10285,
+10286, 10292, 11001, 11004, 11005, 11040, 11096, 11351, 11352, 11359,
+11362, 11363, 11371, 11380, 11381, 11386, 11405, 11411, 11412, 11413,
+11414, 11416, 11417, 11419, 11420, 11421, 11422, 11423, 11424, 11425,
+11427, 11428, 11429, 11430, 11431, 11433, 11436, 11439, 11451, 11499,
+11559, 11580, 11690, 11694, 11695, 11697, 10302, 10307, 10309, 10310,
+10311, 10313
+
+These are likely not in the zillow rental price dataset, because they
+are predominantly non-residential areas. For instance, 10464 is Pelham
+Bay Park, and 11414 is mostly cross bay blvd, a highway that extends
+across Jamaica Bay.
+
+In Jan 2020, average rent cost was 2861.9347505 with a range of
+1375.9764477 to 6334.2106678.
+
+In Jan 2021, average rent cost was 2484.1643495 with a range of
+1420.3820768 to 5421.614077.
+
+``` r
+Jan_compare_df = 
+  full_zip_df |> 
+  filter(month == "January", year %in% c(2020, 2021)) |> 
+  select(zip_code, county, neighborhood, year, zori) |> 
+  tidyr::pivot_wider(
+    names_from = year,
+    values_from = zori,
+    names_prefix = "zori_"
+  )
+```
+
+``` r
+Jan_compare_df =
+  Jan_compare_df |> 
+   mutate(
+    zori_diff = zori_2021 - zori_2020
+  )
+```
+
+``` r
+top_drops = 
+  Jan_compare_df |> 
+  arrange(zori_diff) |> 
+  slice_head(n = 10) |> 
+  select(zip_code, county, neighborhood, zori_2020, zori_2021, zori_diff)
+
+kable(
+  top_drops,
+  caption = "Top 10 ZIP Codes with Largest Rental Price Drops (Jan 2020 → Jan 2021)",
+  col.names = c("ZIP Code", "Borough", "Neighborhood", "ZORI 2020", "ZORI 2021", "Change")
+)
+```
+
+| ZIP Code | Borough  | Neighborhood                  | ZORI 2020 | ZORI 2021 |    Change |
+|---------:|:---------|:------------------------------|----------:|----------:|----------:|
+|    10007 | New York | Lower Manhattan               |  6334.211 |  5421.614 | -912.5966 |
+|    10069 | New York | NA                            |  4623.042 |  3874.918 | -748.1245 |
+|    10009 | New York | Lower East Side               |  3406.442 |  2692.187 | -714.2550 |
+|    10016 | New York | Gramercy Park and Murray Hill |  3731.135 |  3019.431 | -711.7045 |
+|    10001 | New York | Chelsea and Clinton           |  4108.098 |  3397.648 | -710.4499 |
+|    10002 | New York | Lower East Side               |  3645.416 |  2935.113 | -710.3028 |
+|    10004 | New York | Lower Manhattan               |  3149.658 |  2443.697 | -705.9608 |
+|    10038 | New York | Lower Manhattan               |  3573.201 |  2875.616 | -697.5853 |
+|    10012 | New York | Greenwich Village and Soho    |  3628.566 |  2942.344 | -686.2218 |
+|    10010 | New York | Gramercy Park and Murray Hill |  3697.284 |  3012.353 | -684.9304 |
+
+Top 10 ZIP Codes with Largest Rental Price Drops (Jan 2020 → Jan 2021)
