Adding additional inline to answer questions.

--- a/p8105_hw2_ELK2149.md
+++ b/p8105_hw2_ELK2149.md
@@ -208,6 +208,7 @@ the percent of unemployment in the united states by month and year.
 \*\*\* Problem 2 \*\*\*
 
 ``` r
+# cleaning names, renaming weight and volume to simpler names, converting sports_balls to an interger, creating a categorical variable to differentiate data sets, turning year numeric to be congruent with other datasets.
 mr_trash_df = 
   read_excel("./Trash_Data.xlsx", sheet = "Mr. Trash Wheel", range = "A2:N653", na = c("NA", ".")) |>
   janitor::clean_names() |> 
@@ -219,6 +220,7 @@ mr_trash_df =
 ```
 
 ``` r
+# cleaning names, making weight and volume similar to past data set, creating categorical identifier for this data set
 professor_trash_df = 
   read_excel("./Trash_Data.xlsx", sheet = "Professor Trash Wheel", range = "A2:M120", na = c("NA", ".")) |>
   janitor::clean_names() |> 
@@ -227,6 +229,7 @@ professor_trash_df =
 ```
 
 ``` r
+# cleaning names, making weight and volume similar to past data set, creating categorical identifier for this data set
 gwynnda_trash_df = 
   read_excel("./Trash_Data.xlsx", sheet = "Gwynnda Trash Wheel", range = "A2:L265", na = c("NA", ".")) |>
   janitor::clean_names() |> 
@@ -235,6 +238,7 @@ gwynnda_trash_df =
 ```
 
 ``` r
+# binding datasets together (there is no variable to join them by as they are separate bins)
 total_trash_df = 
   bind_rows(mr_trash_df, professor_trash_df, gwynnda_trash_df)
 ```
@@ -250,6 +254,7 @@ butts, collected by Gwynnda Trash Dumpster was 18120.
 \*\*\* Problem 3 \*\*\*
 
 ``` r
+# cleaning names for zip codes dataset
 zip_codes_df = 
     read_csv("./zillow_data/Zip Codes.csv", na = c("NA", ".")) |>
   janitor::clean_names()
@@ -265,6 +270,8 @@ zip_codes_df =
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 ``` r
+# cleaning names for zillow dataset, pivoting long for zori scores across dates, changing zip_code column name to faciliate joining
+
 zip_zori_df = 
     read_csv("./zillow_data/Zip_zori.csv", na = c("NA", ".")) |>
   janitor::clean_names() |> 
@@ -285,6 +292,7 @@ zip_zori_df =
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 ``` r
+# joining datasets
 full_zip_df = 
   left_join(zip_codes_df, zip_zori_df, by = "zip_code")
 ```
@@ -296,6 +304,7 @@ full_zip_df =
     ##   "many-to-many"` to silence this warning.
 
 ``` r
+# cleaning dataset for redundant variables, separating out year month and day for upcoming analysis, regordering columns for ease of reading
 full_zip_df = 
   full_zip_df |> 
   mutate(date = str_remove(date, "^x")) |> 
@@ -309,8 +318,10 @@ full_zip_df =
 
 The variables in this dataset are: zip_code, year, month, day, county,
 neighborhood, city, state, zori, county_fips, region_id, size_rank. The
-data was collected between the dates of 2015 and 2024. The dataset has a
-total of 17687 observations.
+data was collected between the dates of 2015 and 2024.
+
+The dataset has a total of 17687 observations. There are 320 distinct
+zipcodes identified in this data set, and 43 neighborhoods.
 
 The following is a list of zip codes not in the Zillow rental price
 dataset: 10464, 10474, 10475, 10499, 10550, 10704, 10705, 10803, 11202,
@@ -344,6 +355,7 @@ In Jan 2021, average rent cost was 2484.1643495 with a range of
 1420.3820768 to 5421.614077.
 
 ``` r
+# pivoting wide to help with comparison between 2020 and 2021 scores
 Jan_compare_df = 
   full_zip_df |> 
   filter(month == "January", year %in% c(2020, 2021)) |> 
@@ -356,6 +368,7 @@ Jan_compare_df =
 ```
 
 ``` r
+# generating difference scores between 2021 and 2020
 Jan_compare_df =
   Jan_compare_df |> 
    mutate(
@@ -364,6 +377,7 @@ Jan_compare_df =
 ```
 
 ``` r
+# creating table of top 10 price drops, using Kable for cleaner output
 top_drops = 
   Jan_compare_df |> 
   arrange(zori_diff) |> 
@@ -372,7 +386,7 @@ top_drops =
 
 kable(
   top_drops,
-  caption = "Top 10 ZIP Codes with Largest Rental Price Drops (Jan 2020 → Jan 2021)",
+  caption = "Top 10 ZIP Codes with Largest Rental Price Drops",
   col.names = c("ZIP Code", "Borough", "Neighborhood", "ZORI 2020", "ZORI 2021", "Change")
 )
 ```
@@ -390,4 +404,4 @@ kable(
 |    10012 | New York | Greenwich Village and Soho    |  3628.566 |  2942.344 | -686.2218 |
 |    10010 | New York | Gramercy Park and Murray Hill |  3697.284 |  3012.353 | -684.9304 |
 
-Top 10 ZIP Codes with Largest Rental Price Drops (Jan 2020 → Jan 2021)
+Top 10 ZIP Codes with Largest Rental Price Drops
