Commenting on final table.

--- a/p8105_hw2_ELK2149.md
+++ b/p8105_hw2_ELK2149.md
@@ -405,3 +405,6 @@ kable(
 |    10010 | New York | Gramercy Park and Murray Hill |  3697.284 |  3012.353 | -684.9304 |
 
 Top 10 ZIP Codes with Largest Rental Price Drops
+
+The largest price drops appear to have occurred in lower Manhattan,
+within the Borough of New York.
