--- a/p8105_hw2_ELK2149.rmd
+++ b/p8105_hw2_ELK2149.rmd
@@ -238,4 +238,4 @@ kable(
   col.names = c("ZIP Code", "Borough", "Neighborhood", "ZORI 2020", "ZORI 2021", "Change")
 )
 ```
-
+The largest price drops appear to have occurred in lower Manhattan, within the Borough of New York.
