Updated with new trash dataset. Used Gwynns Falls data as replacement for Gwynnda

--- a/p8105_hw2_ELK2149.md
+++ b/p8105_hw2_ELK2149.md
@@ -210,7 +210,7 @@ the percent of unemployment in the united states by month and year.
 ``` r
 # cleaning names, renaming weight and volume to simpler names, converting sports_balls to an interger, creating a categorical variable to differentiate data sets, turning year numeric to be congruent with other datasets.
 mr_trash_df = 
-  read_excel("./Trash_Data.xlsx", sheet = "Mr. Trash Wheel", range = "A2:N653", na = c("NA", ".")) |>
+  read_excel("./Trash_Data.xlsx", sheet = "Mr. Trash Wheel", range = "A2:N709", na = c("NA", ".")) |>
   janitor::clean_names() |> 
   rename(weight = weight_tons, volume = volume_cubic_yards) |> 
   mutate(sports_balls = as.integer(round(sports_balls)),
@@ -222,7 +222,7 @@ mr_trash_df =
 ``` r
 # cleaning names, making weight and volume similar to past data set, creating categorical identifier for this data set
 professor_trash_df = 
-  read_excel("./Trash_Data.xlsx", sheet = "Professor Trash Wheel", range = "A2:M120", na = c("NA", ".")) |>
+  read_excel("./Trash_Data.xlsx", sheet = "Professor Trash Wheel", range = "A2:M134", na = c("NA", ".")) |>
   janitor::clean_names() |> 
   rename(weight = weight_tons, volume = volume_cubic_yards) |> 
   mutate(trash_wheel_name = "Prof")
@@ -231,7 +231,7 @@ professor_trash_df =
 ``` r
 # cleaning names, making weight and volume similar to past data set, creating categorical identifier for this data set
 gwynnda_trash_df = 
-  read_excel("./Trash_Data.xlsx", sheet = "Gwynnda Trash Wheel", range = "A2:L265", na = c("NA", ".")) |>
+  read_excel("./Trash_Data.xlsx", sheet = "Gwynns Falls Trash Wheel", range = "A2:L351", na = c("NA", ".")) |>
   janitor::clean_names() |> 
   rename(weight = weight_tons, volume = volume_cubic_yards) |> 
   mutate(trash_wheel_name = "Gwynnda")
@@ -246,9 +246,9 @@ total_trash_df =
 The variables in this dataset are: dumpster, month, year, date, weight,
 volume, plastic_bottles, polystyrene, cigarette_butts, glass_bottles,
 plastic_bags, wrappers, sports_balls, homes_powered, trash_wheel_name.
-The data was collected between the dates of 2014 and 2024. The dataset
-has a total of 1032 observations. The total weight of trash collected by
-Professor Trash Dumpster was 246.74 tons. The total number of cigarette
+The data was collected between the dates of 2014 and 2025. The dataset
+has a total of 1188 observations. The total weight of trash collected by
+Professor Trash Dumpster was 282.26 tons. The total number of cigarette
 butts, collected by Gwynnda Trash Dumpster was 18120.
 
 \*\*\* Problem 3 \*\*\*
