--- a/p8105_hw2_ELK2149.rmd
+++ b/p8105_hw2_ELK2149.rmd
@@ -106,7 +106,7 @@ The variables in this dataset are: `r (names(pols_snp_unemp_df))`. The data was 
 ```{r}
 # cleaning names, renaming weight and volume to simpler names, converting sports_balls to an interger, creating a categorical variable to differentiate data sets, turning year numeric to be congruent with other datasets.
 mr_trash_df = 
-  read_excel("./Trash_Data.xlsx", sheet = "Mr. Trash Wheel", range = "A2:N653", na = c("NA", ".")) |>
+  read_excel("./Trash_Data.xlsx", sheet = "Mr. Trash Wheel", range = "A2:N709", na = c("NA", ".")) |>
   janitor::clean_names() |> 
   rename(weight = weight_tons, volume = volume_cubic_yards) |> 
   mutate(sports_balls = as.integer(round(sports_balls)),
@@ -119,7 +119,7 @@ mr_trash_df =
 ```{r}
 # cleaning names, making weight and volume similar to past data set, creating categorical identifier for this data set
 professor_trash_df = 
-  read_excel("./Trash_Data.xlsx", sheet = "Professor Trash Wheel", range = "A2:M120", na = c("NA", ".")) |>
+  read_excel("./Trash_Data.xlsx", sheet = "Professor Trash Wheel", range = "A2:M134", na = c("NA", ".")) |>
   janitor::clean_names() |> 
   rename(weight = weight_tons, volume = volume_cubic_yards) |> 
   mutate(trash_wheel_name = "Prof")
@@ -129,7 +129,7 @@ professor_trash_df =
 ```{r}
 # cleaning names, making weight and volume similar to past data set, creating categorical identifier for this data set
 gwynnda_trash_df = 
-  read_excel("./Trash_Data.xlsx", sheet = "Gwynnda Trash Wheel", range = "A2:L265", na = c("NA", ".")) |>
+  read_excel("./Trash_Data.xlsx", sheet = "Gwynns Falls Trash Wheel", range = "A2:L351", na = c("NA", ".")) |>
   janitor::clean_names() |> 
   rename(weight = weight_tons, volume = volume_cubic_yards) |> 
   mutate(trash_wheel_name = "Gwynnda")
